crates/fluvio-connector-derive/tests/ui/config_not_deserialized.stderr
error[E0277]: the trait bound `for<'de> CustomConfig: serde::de::Deserialize<'de>` is not satisfied
 --> tests/ui/config_not_deserialized.rs:3:1
  |
3 | #[connector(source)]
  | ^^^^^^^^^^^^^^^^^^^^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `CustomConfig`
  |
  = help: the following other types implement trait `serde::de::Deserialize<'de>`:
            &'a Path
            &'a [u8]
            &'a str
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
  = note: required for `CustomConfig` to implement `serde::de::DeserializeOwned`
note: required by a bound in `from_value`
 --> $WORKSPACE/crates/fluvio-connector-common/src/config.rs
  |
  | pub fn from_value<T: DeserializeOwned>(value: Value) -> Result<T> {
  |                      ^^^^^^^^^^^^^^^^ required by this bound in `from_value`
  = note: this error originates in the attribute macro `connector` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/config_not_deserialized.rs:3:1
  |
3 | #[connector(source)]
  | ^^^^^^^^^^^^^^^^^^^^ expected `()`, found struct `fluvio::producer::TopicProducer`
4 | async fn start_fn(config: CustomConfig, producer: ()) {}
  |          -------- arguments to this function are incorrect
  |
note: function defined here
 --> tests/ui/config_not_deserialized.rs:4:10
  |
4 | async fn start_fn(config: CustomConfig, producer: ()) {}
  |          ^^^^^^^^                       ------------
  = note: this error originates in the attribute macro `connector` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the `?` operator can only be used in an async block that returns `Result` or `Option` (or another type that implements `FromResidual`)
 --> tests/ui/config_not_deserialized.rs:3:20
  |
3 | #[connector(source)]
  | -------------------^
  | |                  |
  | |                  cannot use the `?` operator in an async block that returns `()`
  | this function should return `Result` or `Option` to accept `?`
  |
  = help: the trait `FromResidual<Result<Infallible, anyhow::Error>>` is not implemented for `()`
  = note: this error originates in the attribute macro `connector` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the `?` operator can only be applied to values that implement `Try`
 --> tests/ui/config_not_deserialized.rs:3:1
  |
3 | #[connector(source)]
  | ^^^^^^^^^^^^^^^^^^^^ the `?` operator cannot be applied to type `()`
  |
  = help: the trait `Try` is not implemented for `()`
