crates/fluvio-connector-derive/tests/ui/config_not_deserialized.rs
use fluvio_connector_common::connector;

#[connector(source)]
async fn start_fn(config: CustomConfig, producer: ()) {}

struct CustomConfig {}
